--------------------------------------------------------------------------------------------------
Release notes version 1.9.4_beta : Enhancements, modifications and corrected bugs since version 1.9.3 :
--------------------------------------------------------------------------------------------------
11/01/24 (TRUST) Tools        : Git repository of 'externalpackages' was reset to start fresh from version 1.9.3
10/01/24 (TRUST) Minor change : TRUST can be linked to a pre-compiled static library of CoolProp 6.6.0 version
10/01/24 (TRUST) Fix          : Nusselt.face file was not updated at the end of computation if this latter is stopped by putting 1 in .stop file
19/12/23 (TRUST) Fix          : The new post-processing format "single_lata" can be used with a TRUST 64 bit integers version.
18/12/23 (TRUST) New feature  : Add option "write_singlelata" to lata_analyzer : useful to merge multiple binary lata files in a single one ! To resplit into multiple files, use "writelata".
--------------------------------------------------------------------------------------------------
Release notes version 1.9.3 : Enhancements, modifications and corrected bugs since version 1.9.2 :
--------------------------------------------------------------------------------------------------
13/11/23 (TRUST) New feature  : New option  for DP_impose keyword: dp_regul to regulate the DP in order to match a target flow rate.
09/11/23 (TRUST) New feature  : Introducing a new tool for dataset Python maniupulation and reference doc generation -> trustpy. Check out README.md in Outils/trustpy/doc
07/11/23 (TRUST) New option   : New option while launching TRUST executable -log_directory=<logs_dir>/ to save .log files into logs_dir (interesting for parallel computations)
07/11/23 (TRUST) New feature  : New interpreter "lml_to_lata" that can be used to convert lml files to single_lata format.