@@ -7,8 +7,8 @@ package=$1
 ######################################
 add_package()
 {
-   echo $ECHO_OPTS "Looking for package $1... \c"
-   external_package=`cd ..;ls -rt $1*.tar.gz $1*.tgz $1*.tar.bz2 2>/dev/null | tail -1`
+   echo $ECHO_OPTS "Looking for package $1 $2 ... \c"
+   external_package=`cd ..;ls -rt $1*$2.tar.gz $1*$2.tgz $1*$2.tar.bz2 2>/dev/null | tail -1`
    #external_package=`grep petsc $TRUST_ROOT/bin/gestion_externalpackages/liste_dep.csv  | awk -F, '{print "/"$2}' | grep "/"$1`
    lower_name=`echo $1 | awk '{print tolower($1)}'`
    if [ "$external_package" = "" ]
@@ -155,6 +155,7 @@ then
       then
          echo "$petsc_for_kernel file changed..."
          echo "#include <petscksp.h>
+#define PETSCKSP_H
 #$string" > $petsc_for_kernel
       fi
 
@@ -272,22 +273,30 @@ with_packages=""
 if [ "$TRUST_USE_CUDA" = 1 ] && [ "$TRUST_INT64" != 1 ]
 then
    echo "****************************************"
-   echo "TRUST_USE_CUDA=$TRUST_USE_CUDA"
+   echo "PETSC_HAVE_CUDA=$PETSC_HAVE_CUDA"
    with_gpu="--with-cuda"
    with_gpu=$with_gpu" --with-cudac=$TRUST_NVCC"
-   CUDA_STUBS="" && [ -d $CUDA_ROOT/lib64/stubs ]        && CUDA_STUBS=",-L$CUDA_ROOT/lib64/stubs"        # Necessaire sur irene pas sur jeanzay (fait ch..r)
-   for CUDA_LIB_PATH in $CUDA_ROOT/math_libs $CUDA_ROOT/../math_libs $CUDA_ROOT/../../math_libs `echo $CUDA_ROOT | sed "1,$ s?/cuda/?/../math_libs/?g"`
-   do
-      [ -d $CUDA_LIB_PATH ] && CUDA_MATH=",-L$CUDA_LIB_PATH/lib64" && break
-   done
-   with_gpu=$with_gpu" --with-cuda-lib=[-L$CUDA_ROOT/lib64$CUDA_STUBS$CUDA_MATH,-lcudart,-lcublas,-lcublasLt,-lcufft,-lcusparse,-lcusolver]"
-   CUDA_INCLUDES=`ls $CUDA_ROOT/include/cuda/cuda.h $CUDA_ROOT/include/cuda.h $CUDA_LIB_PATH/include/cublas.h 2>/dev/null`
-   with_gpu=$with_gpu" --with-cuda-include=["
-   for CUDA_INCLUDE in $CUDA_INCLUDES
-   do
-      with_gpu=$with_gpu"`dirname $CUDA_INCLUDE`,"
-   done
-   with_gpu=$with_gpu"]"
+   with_cuda_dir=1
+   if [ $with_cuda_dir = 1 ]
+   then
+      # PETSc>=3.18 detecte mieux:
+      with_gpu=$with_gpu" --with-cuda-dir=$CUDA_ROOT"
+   else
+      # PETSc=3.18.5
+      CUDA_STUBS="" && [ -d $CUDA_ROOT/lib64/stubs ]        && CUDA_STUBS=",-L$CUDA_ROOT/lib64/stubs"        # Necessaire sur irene pas sur jeanzay (fait ch..r)
+      for CUDA_LIB_PATH in $CUDA_ROOT/math_libs $CUDA_ROOT/../math_libs $CUDA_ROOT/../../math_libs `echo $CUDA_ROOT | sed "1,$ s?/cuda/?/../math_libs/?g"`
+      do
+         [ -d $CUDA_LIB_PATH ] && CUDA_MATH=",-L$CUDA_LIB_PATH/lib64" && break
+      done
+      with_gpu=$with_gpu" --with-cuda-lib=[-L$CUDA_ROOT/lib64$CUDA_STUBS$CUDA_MATH,-lcudart,-lcublas,-lcublasLt,-lcufft,-lcusparse,-lcusolver,-lcurand]"
+      CUDA_INCLUDES=`ls $CUDA_ROOT/include/cuda/cuda.h $CUDA_ROOT/include/cuda.h $CUDA_LIB_PATH/include/cublas.h 2>/dev/null`
+      with_gpu=$with_gpu" --with-cuda-include=["
+      for CUDA_INCLUDE in $CUDA_INCLUDES
+      do
+         with_gpu=$with_gpu"`dirname $CUDA_INCLUDE`,"
+      done
+      with_gpu=$with_gpu"]"
+   fi
    CUDAFLAGS="-O3 -ccbin $TRUST_cc_BASE"
    add_package viennacl
    echo "CUDA support for PETSc with: "$with_gpu
@@ -442,7 +451,7 @@ fi
 if [ "$TRUST_USE_MUMPS" = 1 ] && [ "`uname -m`" != aarch64 ] # configure de PETSc plante sur mumps avec ARM
 then
    # On prend MUMPS (plus performant)
-   add_package MUMPS
+   add_package MUMPS 5.5.1 # 5.6.1 dans extp : des soucis a regler
 fi
 add_package metis
 
@@ -470,14 +479,14 @@ if [ "$TRUST_DISABLE_MPI" = 0 ]
 then
    # SUPERLU_DIST: Attention avec OpenMPI natif...
    # SuperLU_dist sur GPU necessite OpenMP ! Argh...
-   #[ $minimal_mumps = 0 ] && add_package superlu_dist && [ "$TRUST_USE_CUDA" = 1 ] && [ $PETSC_HAVE_OPENMP = 0 ] && echo "Rerun configure by adding -openmp!" && exit 1
-   [ "$minimal_mumps" = 0 ] && [ "$TRUST_USE_CUDA" = 1 ] && [ "$PETSC_HAVE_OPENMP" = 1 ] && add_package superlu_dist
+   #[ $minimal_mumps = 0 ] && add_package superlu_dist && [ "$PETSC_HAVE_CUDA" = 1 ] && [ $PETSC_HAVE_OPENMP = 0 ] && echo "Rerun configure by adding -openmp!" && exit 1
+   [ "$minimal_mumps" = 0 ] && [ "$PETSC_HAVE_CUDA" = 1 ] && [ "$PETSC_HAVE_OPENMP" = 1 ] && add_package superlu_dist
 
    # New (SuiteSparse/Cholmod/UmfPack):
    if [ "$minimal_mumps" = 0 ]
    then
       # Cholmod GPU pas portable avec cartes recentes type V100/A100 sur Cuda 11.x, on desactive en attendant montee de version:
-      if [ "$TRUST_USE_CUDA" != 1 ] || [ "$TRUST_WITHOUT_HOST" = 1 ]
+      if [ "$PETSC_HAVE_CUDA" != 1 ] || [ "$TRUST_WITHOUT_HOST" = 1 ]
       then
          add_package SuiteSparse && with_packages=$with_packages" --download-suitesparse-disablegpu=1" # Add --with-64-bit-indices ?
       fi
@@ -515,7 +524,13 @@ then
    #######
    # Hypre
    #######
-   [ $minimal_mumps = 0 ]  && add_package hypre
+   if [ "$TRUST_USE_CUDA" = 1 ]
+   then
+      # PETSc 3.20 necessite une montee de version pour Hypre sur GPU:
+      [ ! -f ../hypre-2.19.0.tar.gz ] && add_package hypre
+   else
+      [ $minimal_mumps = 0 ] && add_package hypre
+   fi   
 fi
 
 ##########
@@ -577,12 +592,10 @@ do
    # On recupere les flags de compilation de TRUST pour etre coherent (oubli de -fPIC dans 1.6.2)
    fic_env=$TRUST_ROOT/env/make.$TRUST_ARCH_CC`[ $debug = 0 ] && echo _opt`
    [ "$COPTFLAGS" = "" ] && COPTFLAGS=`$TRUST_Awk '/ccFLAGS =/ {gsub("ccFLAGS =","",$0);print $0}' $fic_env`
-   # On compile les librairies Fortran (eg:MUMPS) en int32:
-   if [ "$TRUST_INT64" = "1" ]
+   if [ "$FOPTFLAGS" = "" ]
    then
+      # On compile les librairies Fortran (eg:MUMPS) en int32 donc on supprime les eventuelles conversion des int sur 8 octets:
       FOPTFLAGS=`$TRUST_Awk '/F77Flags =/ {gsub("F77Flags =","",$0);print $0}' $fic_env | sed "s/-fdefault-integer-8//g" | sed "s/-i8//g" `
-   else
-      FOPTFLAGS=`$TRUST_Awk '/F77Flags =/ {gsub("F77Flags =","",$0);print $0}' $fic_env`
    fi
    CXXOPTFLAGS=$COPTFLAGS
    echo "Configuring PETSc..."
@@ -625,9 +638,9 @@ do
       # Cas tests
       ###########
       err=0
-      if [ "$TRUST_USE_CUDA" != 1 ]
+      if [ "$PETSC_HAVE_CUDA" != 1 ]
       then
-         # Tests with TRUST_USE_CUDA=1 are done below
+         # Tests with PETSC_HAVE_CUDA=1 are done below
          #  bloque de temps en temps make test
          echo No running make test
 	 err=$?
