@@ -49,13 +49,13 @@ lapack,OpenBLAS-0.3.21.tar.gz,,PL,BSD,https://www.openblas.net/,http://github.co
 lapack,OpenBLAS-0.3.23.tar.gz,,PL,BSD,https://www.openblas.net/,https://github.com/xianyi/OpenBLAS/releases/download/v0.3.23/OpenBLAS-0.3.23.tar.gz,
 petsc,SuiteSparse-5.7.1.tar.gz,,,"voir remarque",http://faculty.cse.tamu.edu/davis/suitesparse.html,https://github.com/DrTimothyAldenDavis/SuiteSparse/archive/v5.7.1.tar.gz,"je ne sais pas quel est le type de licence, on peut voir http://www.netlib.org/linalg/SuiteSparse-README.txt"
 petsc,viennacl-dc552a8.tar.gz,,,"MIT License",http://viennacl.sourceforge.net/,http://downloads.sourceforge.net/project/viennacl/1.5.x/ViennaCL-1.5.1.tar.gz,"Hum option utilisee ????"
-petsc,scotch-6.0.9.tar.gz,,PL," CeCILL-C license",http://scotch.gforge.inria.fr/,https://gforge.inria.fr/frs/download.php/file/38187/scotch_6.0.9.tar.gz,
+petsc,scotch-6.1.1.tar.gz,,PL," CeCILL-C license",http://scotch.gforge.inria.fr/,https://gforge.inria.fr/frs/download.php/file/38187/scotch_6.1.1.tar.gz,
 petsc,parmetis-4.0.3-p6.tar.gz,,PL,"Freely distributed as described in the FAQ section of the site http://glaros.dtc.umn.edu/gkhome/metis/parmetis/download",http://glaros.dtc.umn.edu/gkhome/metis/parmetis/overview,https://bitbucket.org/petsc/pkg-parmetis/get/v4.0.3-p6.tar.gz,"pour la licence (je ne sais pas ce que c'est) voir http://glaros.dtc.umn.edu/gkhome/metis/parmetis/download"
-petsc,superlu_dist-6.3.0.tar.gz,,PL,BSD,http://www.cs.berkeley.edu/~demmel/SuperLU.html,https://github.com/xiaoyeli/superlu_dist/archive/v6.3.0.tar.gz,
-petsc,superlu-5.2.1.tar.gz,,PL,BSD,http://www.cs.berkeley.edu/~demmel/SuperLU.html,https://github.com/xiaoyeli/superlu/archive/v5.2.1.tar.gz,
-petsc,hypre-2.19.0.tar.gz,,GF,LGPL,http://files.salome-platform.org,https://github.com/LLNL/hypre/archive/v2.19.0.tar.gz,
-petsc,petsc-3.14.1.tar.gz,,"PL",BSD,http://www.mcs.anl.gov/research/projects/petsc/index.html,https://www.mcs.anl.gov/petsc/mirror/release-snapshots/petsc-3.14.1.tar.gz,
-petsc,MUMPS_5.3.3-p2.tar.gz,,GF,CeCILL-C,http://mumps.enseeiht.fr/index.php?page=home,https://bitbucket.org/petsc/pkg-mumps/get/v5.3.3-p2.tar.gz,
+petsc,superlu_dist-7.1.1.tar.gz,,PL,BSD,http://www.cs.berkeley.edu/~demmel/SuperLU.html,https://github.com/xiaoyeli/superlu_dist/archive/v7.1.1.tar.gz,
+petsc,superlu-5.3.0.tar.gz,,PL,BSD,http://www.cs.berkeley.edu/~demmel/SuperLU.html,https://github.com/xiaoyeli/superlu/archive/v5.3.0.tar.gz,
+petsc,hypre-2.23.0.tar.gz,,GF,LGPL,http://files.salome-platform.org,https://github.com/LLNL/hypre/archive/v2.23.0.tar.gz,
+petsc,petsc-3.16.2.tar.gz,,"PL",BSD,http://www.mcs.anl.gov/research/projects/petsc/index.html,https://www.mcs.anl.gov/petsc/mirror/release-snapshots/petsc-3.16.2.tar.gz,
+petsc,MUMPS_5.4.1-p1.tar.gz,,GF,CeCILL-C,http://mumps.enseeiht.fr/index.php?page=home,https://bitbucket.org/petsc/pkg-mumps/get/v5.4.1-p1.tar.gz,
 petsc,scalapack-2.1.0-p2.tgz,,PL,"BSD modified",http://www.netlib.org/scalapack/,http://www.netlib.org/scalapack/scalapack-2.1.0.tgz,
 petsc,metis-5.1.0-p10.tar.gz,,PL,Apache,http://glaros.dtc.umn.edu/gkhome/metis/metis/overview,https://bitbucket.org/petsc/pkg-metis/get/v5.1.0-p10.tar.gz,
 AmgX,AmgXWrapper_331eba32db693528749bd2c46158073079d80972.tar.gz,,PL,MIT,https://github.com/barbagroup/AmgXWrapper
