@@ -213,17 +213,19 @@ ffb6120e2309a2280471716301824805  lapack/OpenBLAS-0.3.21.tar.gz
 44c3869c38c8335c2b9c2a8bb276eb55  lapack/lapack-3.4.1.tgz
 b5e558f981326d9ca1bfdb841640721a  make-4.0.tar.gz
 9be6e048224797bf531f94b7a8aaa99d  osqp-0.6.0.tar.gz
-fe535e221293e72c7813e3bc2a60640a  petsc/MUMPS_5.3.3-p2.tar.gz
-0ddc62ed2636720be74be2e27e1fef6e  petsc/SuiteSparse-5.7.1.tar.gz
-6704f17e342976e076e84c367bc995f3  petsc/hypre-2.19.0.tar.gz
+da26c4b43d53a9a6096775245cee847f  petsc/MUMPS_5.5.1.tar.gz
+7fa49bd4f6d33dc94a643a87fee706fd  petsc/MUMPS_5.6.1.tar.gz
+e9e7bc594b77ae4b58d943cdc286d679  petsc/SuiteSparse-5.13.0.tar.gz
+69628ef6a63c8fde80a615e9be03a1fe  petsc/configure.help
+c6312359371445ec0aa3efc64dcc4979  petsc/hypre-2.29.0.tar.gz
 82e3b09d577580747fbcada30d9b4228  petsc/metis-5.1.0-p10.tar.gz
-3ba025a94fa01594573ee0df4fca9bef  petsc/ml-6.2-p4.tar.gz
-4aefdc1b32412562260126698fcb8055  petsc/parmetis-4.0.3-p6.tar.gz
-15f64ce6933e78a17556a73bc3cc13ef  petsc/petsc-3.14.1.tar.gz
-921248775d6935e11ec1eec3efdafa9d  petsc/scalapack-2.1.0-p2.tgz
-2484682a84eddda48ddcbe725adea875  petsc/scotch-6.0.9.tar.gz
-b721c134f138620824347930f0333ceb  petsc/superlu-5.2.1.tar.gz
-cfa3a57cadd5b6df544bbb88942015b3  petsc/superlu_dist-6.3.0.tar.gz
+0771bb2dd4a9ce692cfb036d5a3e0b71  petsc/ml-13.2.0.tar.gz
+5549747a1a653f1e1909d40fff52ddb9  petsc/parmetis-4.0.3-p8.tar.gz
+d7fb92173bd7df04831ba1fd8219e229  petsc/petsc-3.20.0.tar.gz
+7922e88bf861ed117efe9a334399471e  petsc/scalapack-5bad7487f4.tar.gz
+5c9c702e4f40c575617702f9883e9416  petsc/scotch-7.0.3.tar.gz
+3a5123b86bd517fe28c830ae7d12cb25  petsc/superlu-5.3.0.tar.gz
+43a2915baabdf167322cdb7bdf7c8ac2  petsc/superlu_dist-8.1.2.tar.gz
 5ddaf8169771ad50cd2f4a0b4ee8730d  petsc/viennacl-dc552a8.tar.gz
 bd1e284ae6bcb07fa862763ec924af89  pip/mpi4py-3.0.3.tar.gz
 c7ef1ee1793c7b9b5a6e2506f70c9320  rocALUTION/rocALUTION-f72a3919b52b64.tar.gz
