@@ -22,11 +22,11 @@ then
       [ -f libcmumps.a ] && PETSC=$PETSC" -lcmumps -ldmumps -lmumps_common -lsmumps -lzmumps -lpord"
       [ -f libpastix.a ] && PETSC=$PETSC" -lpastix"
       [ -f libml.a ] && PETSC=$PETSC" -lml"
-      for lib in HYPRE scalapack blacs spai parms parmetis metis ptesmumps ptscotcherr ptscotcherrexit ptscotchparmetis ptscotch scotch scotcherr scotcherrexit Vc
+      for lib in HYPRE scalapack blacs spai parms parmetis metis ptesmumps ptscotcherr ptscotcherrexit ptscotchparmetisv3 ptscotch scotch scotcherr scotcherrexit Vc
       do
          [ -f lib$lib.a ] && PETSC=$PETSC" -l$lib"
       done
-      [ -f libumfpack.a ] && PETSC=$PETSC" -lumfpack -lklu -lcholmod -lbtf -lccolamd -lcolamd -lcamd -lamd -lsuitesparseconfig" && [ `uname -s` != Darwin ] && SYSLIBS=$SYSLIBS" -lrt"
+      [ -f libumfpack.a ] && PETSC=$PETSC" -lumfpack -lklu -lspqr -lcholmod -lbtf -lccolamd -lcolamd -lcamd -lamd -lsuitesparseconfig" && [ `uname -s` != Darwin ] && SYSLIBS=$SYSLIBS" -lrt"
 
       # Link avec les librairies statiques de CUDA:
       # Pros: Portability ?
